# traceboard

./: .gitignore  LICENSE  README.md  README_ja.md  README_zh.md  pyproject.toml
examples/: openai_agent_demo.py
tests/: test_api.py  test_database.py  test_exporter.py  test_processor.py
traceboard/: __init__.py  cli.py  config.py  cost.py
traceboard/dashboard/: index.html
traceboard/dashboard/static/: app.js  styles.css
traceboard/sdk/: __init__.py  _base.py  anthropic_tracer.py  exporter.py  langchain_handler.py  litellm_logger.py  processor.py
traceboard/server/: __init__.py  app.py  database.py  models.py
traceboard/server/routes/: __init__.py  metrics.py  spans.py  traces.py
