[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceboard"
version = "0.1.1"
description = "Local-first AI Agent observability & debugging toolkit. The SQLite of Agent tracing."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TraceBoard Contributors"}
]
keywords = ["ai", "agent", "observability", "tracing", "debugging", "openai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "openai-agents>=0.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
]

[project.scripts]
traceboard = "traceboard.cli:main"

[project.urls]
Homepage = "https://github.com/123zcr/traceboard"
Documentation = "https://github.com/123zcr/traceboard#readme"
Repository = "https://github.com/123zcr/traceboard"
Issues = "https://github.com/123zcr/traceboard/issues"

[tool.setuptools.packages.find]
include = ["traceboard*"]

[tool.setuptools.package-data]
traceboard = ["dashboard/**/*", "py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
